--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Happy Monthsary!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Happy Monthsary, My Love!</h1>
+    </header>
+    <main>
+        <section id="message">
+            <h2>Our Special Moments</h2>
+            <p>Every moment with you is a treasure. Here’s to our love!</p>
+        </section>
+        <section id="images">
+            <h2>Memories Together</h2>
+            <img src="image1.jpg" alt="Memory 1" class="memory">
+            <img src="image2.jpg" alt="Memory 2" class="memory">
+            <img src="image3.jpg" alt="Memory 3" class="memory">
+        </section>
+        <button onclick="showLoveMessage()">Click for a Surprise!</button>
+        <div id="surprise" style="display: none;">
+            <p>I love you more than words can say! ❤️</p>
+        </div>
+    </main>
+    <footer>
+        <p>Created with love by BJ</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
