--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
             <h2>Memories Together</h2>
             <img src="image1.jpg" alt="Memory 1" class="memory" onclick="showLetter('Baguio trip love oray naka adadayo jay byahe ket naanusan ta latta oray nag lamiis ken nag kittang ag motor pero sulit amin ta kadwa ka')">
             <img src="image2.jpg" alt="Memory 2" class="memory" onclick="showLetter('Masetta beach love memorable met lang atuy love kase nag stay ta dijay ti 1day pati panag luto kada apa kada aglalaok pero mayat nga memories atuy metlang love')">
-            <img src="image3.jpg" alt="Memory 3" class="memory" onclick="showLetter('')">
+            <img src="image3.jpg" alt="Memory 3" class="memory" onclick="showLetter('first meet up jay baguio love ado met nag paspasyaran tay dituy mejo adda tampuhan cute cute mo dita love')">
         </section>
         <button onclick="showLoveMessage()">Click for a Surprise!</button>
         <div id="surprise" style="display: none;">
-            <p>I love you more than words can say! ❤️</p>
+            <p>I love you more than words can say!❤️
+            </p>
+            <p>click the pictures</p>
         </div>
     </main>
     <footer>
