--- a/index.html
+++ b/index.html
@@ -21,23 +21,27 @@
             <img src="image2.jpg" alt="Memory 2" class="memory" onclick="showLetter('Masetta beach love memorable met lang atuy love kase nag stay ta dijay ti 1day pati panag luto kada apa kada aglalaok pero mayat nga memories atuy metlang love')">
             <img src="image3.jpg" alt="Memory 3" class="memory" onclick="showLetter('first meet up jay baguio love ado met nag paspasyaran tay dituy mejo adda tampuhan cute cute mo dita love')">
         </section>
-        <button onclick="showLoveMessage()">Click for a Surprise!</button>
+        <button onclick="showLoveMessage()">Click Me First</button>
         <div id="surprise" style="display: none;">
             <p>I love you more than words can say!❤️
             </p>
             <p>click the pictures</p>
         </div>
+        <button id="giftButton" onclick="showGift()">🎁 BIG SURPRISE</button>
+        <div id="giftPopup" style="display: none;">
+            <button class="closeGift" onclick="closeGiftPopup()">✖</button>
+            <p>Here's a special surprise for you! ❤️</p>
+            <img src="gift." alt="Gift" class="gift">
+        </div>
     </main>
     <footer>
         <p>Created with love by BJ</p>
     </footer>
-
     <div id="overlay" onclick="closePopup()"></div>
     <div id="letterPopup">
         <span class="close" onclick="closePopup()">✖</span>
         <p id="letterMessage"></p>
     </div>
-
     <script src="script.js"></script>
     <script>
         function showLetter(message) {
