--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <button id="giftButton" onclick="showGift()">🎁 BIG SURPRISE</button>
         <div id="giftPopup" style="display: none;">
             <button class="closeGift" onclick="closeGiftPopup()">✖</button>
-            <p>Here's a special surprise for you! ❤️</p>
-            <img src="gift." alt="Gift" class="gift">
+            <p>Happy 58 months of loving love. Inaramidan ka iti code love tapno ma feel mo met maaramidan iti website para lang kanyam love. Every effort ko nga nagaramid atuy love ket dedicated amin para kanyam lang sika ti kauna unahan nga incodak iti kastuy kabayak kin romantic. Oray narigat ket aramidek para kanyam lang love oray natrabaho. Stay strong kanyata love, More laughs kin away haahhah Celebrate ta man iti monthsary'n nag pardas love. Happy monthsary and ILOVEYOU LOVE❤️</p>
+            <img src="gift.jpg" alt="Gift" class="gift">
         </div>
     </main>
     <footer>
